Issue #440: Fix wrapping on mobile

--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -16,7 +16,7 @@
   margin-bottom: 1.33rem;
   overflow: auto;
   border-radius: 0.3rem;
-  white-space: nowrap;
+  white-space: pre;
   word-break: break-word;
   /* fallback when Shiki encounters unknown syntax */
   color: var(--g2);
